// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform throws if no inputs 1`] = `[Error: Missing input files]`;

exports[`transform throws if no matched files 1`] = `[Error: Cannot find source files]`;

exports[`transform throws if no output dir 1`] = `[Error: Missing output directory]`;

exports[`transform transforms icons to src only 1`] = `
Array [
  "Check.js",
  "Gold.js",
  "Icon.js",
  "ThumbUp.js",
  "index.js",
]
`;

exports[`transform transforms icons to src/es/cjs 1`] = `
Array [
  Object {
    "dir": "test/fixtures/transform/src",
    "files": Array [
      "Check.js",
      "Gold.js",
      "Icon.js",
      "ThumbUp.js",
      "index.js",
    ],
  },
  Object {
    "dir": "test/fixtures/transform/es",
    "files": Array [
      "Check.js",
      "Gold.js",
      "Icon.js",
      "ThumbUp.js",
      "index.js",
    ],
  },
  Object {
    "dir": "test/fixtures/transform/cjs",
    "files": Array [
      "Check.js",
      "Gold.js",
      "Icon.js",
      "ThumbUp.js",
      "index.js",
    ],
  },
]
`;
